--- a/select-role.html
+++ b/select-role.html
@@ -125,7 +125,8 @@
         }
     </style>
 </head>
-<body>    <a href="index.html" class="back-button">
+<body>
+    <a href="index.html" class="back-button">
         <i class="fas fa-arrow-left"></i>
         Back to Home
     </a>
@@ -134,7 +135,8 @@
             <h1>Select Your Role</h1>
             <p>Choose how you'd like to interact with our bookstore</p>
         </div>
-        <div class="role-grid">        <a href="customer-login.html" class="role-card">
+        <div class="role-grid">
+            <a href="customer-login.html" class="role-card">
                 <i class="fas fa-user"></i>
                 <h2>Customer</h2>
                 <p>Browse and purchase books from our extensive collection. Access personalized recommendations and track your orders.</p>
