--- a/courier-login.html
+++ b/courier-login.html
@@ -147,7 +147,7 @@
     </style>
 </head>
 <body>
-    <a href="select-role.html" class="back-button">
+    <a href="index.html" class="back-button">
         <i class="fas fa-arrow-left"></i>
         Back
     </a>
@@ -157,7 +157,31 @@
             <h1>Courier Login</h1>
             <p>Access your delivery dashboard</p>
         </div>
-        <form action="courier_login_handler.php" method="POST">
+        
+        <!-- Error message display -->
+        <script>
+            const urlParams = new URLSearchParams(window.location.search);
+            const error = urlParams.get('error');
+            if (error) {
+                const errorDiv = document.createElement('div');
+                errorDiv.style.cssText = 'background: #ffebee; color: #c62828; padding: 10px; margin: 10px 0; border-radius: 5px; text-align: center;';
+                let errorMessage = '';
+                switch(error) {
+                    case 'invalid_credentials':
+                        errorMessage = 'Invalid courier ID or email address';
+                        break;
+                    case 'invalid_password':
+                        errorMessage = 'Incorrect password';
+                        break;
+                    default:
+                        errorMessage = 'Login failed. Please try again.';
+                }
+                errorDiv.textContent = errorMessage;
+                document.querySelector('.login-container').insertBefore(errorDiv, document.querySelector('form'));
+            }
+        </script>
+        
+        <form action="simple_courier_login.php" method="POST" autocomplete="off">
             <div class="form-group">
                 <label for="courier-id">Courier ID</label>
                 <input type="text" id="courier-id" name="courier_id" required placeholder="Enter your courier ID">
