--- a/customer-login.html
+++ b/customer-login.html
@@ -147,7 +147,7 @@
     </style>
 </head>
 <body>
-    <a href="select-role.html" class="back-button">
+    <a href="index.html" class="back-button">
         <i class="fas fa-arrow-left"></i>
         Back
     </a>
@@ -155,27 +155,27 @@
         <div class="login-header">
             <i class="fas fa-user"></i>
             <h1>Customer Login</h1>
-            <p>Welcome back! Please login to your account</p>
+            <p>Access your account</p>
         </div>
-        <form>
+        <form action="customer_login_handler.php" method="POST" autocomplete="off">
             <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" id="email" required placeholder="Enter your email">
+                <input type="email" id="email" name="email" required placeholder="Enter your email">
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" required placeholder="Enter your password">
+                <input type="password" id="password" name="password" required placeholder="Enter your password">
             </div>
             <div class="remember-forgot">
                 <div class="remember-me">
-                    <input type="checkbox" id="remember">
+                    <input type="checkbox" id="remember" name="remember">
                     <label for="remember">Remember me</label>
                 </div>
                 <a href="#" class="forgot-password">Forgot Password?</a>
             </div>
             <button type="submit" class="login-button">Login</button>
             <div class="register-link">
-                Don't have an account? <a href="#">Register Now</a>
+                New customer? <a href="#">Create an account</a>
             </div>
         </form>
     </div>
