--- a/customer-login.html
+++ b/customer-login.html
@@ -230,6 +230,14 @@
                     <label for="reg-name">Full Name</label>
                     <input type="text" id="reg-name" required placeholder="Enter your full name">
                 </div>
+                <div class="form-group">
+                    <label for="reg-phone">Phone</label>
+                    <input type="tel" id="reg-phone" required placeholder="Enter your phone number">
+                </div>
+                <div class="form-group">
+                    <label for="reg-address">Address</label>
+                    <input type="text" id="reg-address" required placeholder="Enter your address">
+                </div>
                 <button type="submit" class="login-button">Register</button>
             </form>
         </div>
@@ -279,13 +287,15 @@
             const email = document.getElementById('reg-email').value.trim();
             const password = document.getElementById('reg-password').value;
             const name = document.getElementById('reg-name').value.trim();
+            const phone = document.getElementById('reg-phone').value.trim();
+            const address = document.getElementById('reg-address').value.trim();
 
             fetch('customer-register.php', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/x-www-form-urlencoded'
                 },
-                body: `email=${encodeURIComponent(email)}&password=${encodeURIComponent(password)}&name=${encodeURIComponent(name)}`
+                body: `email=${encodeURIComponent(email)}&password=${encodeURIComponent(password)}&name=${encodeURIComponent(name)}&phone=${encodeURIComponent(phone)}&address=${encodeURIComponent(address)}`
             })
             .then(response => response.json())
             .then(data => {
