Rename seller login to login.php and update all references
- Renamed seller_login.php to login.php for cleaner URL
- Updated select-role.html to navigate to seller/login.php
- Updated all file references from seller_login.php to login.php
- All tests passing with new login file name

--- a/select-role.html
+++ b/select-role.html
@@ -146,10 +146,8 @@
         <i class="fas fa-user-shield"></i>
         <h2>Admin</h2>
         <p>Manage the bookstore platform, users, and inventory. Access advanced analytics and system controls.</p>
-      </a>
-
-      <!-- ✅ Improved Seller Card -->
-      <a href="seller/seller_login.php" class="role-card" target="_self" title="Login as a Seller" aria-label="Seller login button">
+      </a>      <!-- ✅ Improved Seller Card -->
+      <a href="seller/login.php" class="role-card" target="_self" title="Login as a Seller" aria-label="Seller login button">
         <i class="fas fa-store"></i>
         <h2>Seller</h2>
         <p>List and sell your books on our platform. Manage your inventory and track your sales.</p>
