Restore seller_login.php name and update all references
- Renamed login.php back to seller_login.php as requested
- Updated select-role.html to navigate to seller/seller_login.php
- Updated all internal references to use seller_login.php
- File is now located at: BookStore/seller/seller_login.php
- All tests passing successfully

--- a/customer-login.html
+++ b/customer-login.html
@@ -142,7 +142,7 @@
             <a href="select-role.html" class="btn btn-outline">
                 <i class="fas fa-arrow-left"></i> Back to Role Selection
             </a>
-            <a href="seller/login.php" class="btn">
+            <a href="seller/seller_login.php" class="btn">
                 <i class="fas fa-store"></i> Seller Login
             </a>
         </div>
