--- a/select-role.html
+++ b/select-role.html
@@ -147,7 +147,7 @@
         <h2>Admin</h2>
         <p>Manage the bookstore platform, users, and inventory. Access advanced analytics and system controls.</p>
       </a>      <!-- ✅ Improved Seller Card -->
-      <a href="seller/login.php" class="role-card" target="_self" title="Login as a Seller" aria-label="Seller login button">
+      <a href="seller/seller_login.php" class="role-card" target="_self" title="Login as a Seller" aria-label="Seller login button">
         <i class="fas fa-store"></i>
         <h2>Seller</h2>
         <p>List and sell your books on our platform. Manage your inventory and track your sales.</p>
